src/shared/adjusters/css/style.css
@font-face {
    font-family: 'radioButtonIcons';
    src: url('../fonts/blackDot.ttf') format('truetype'),
         url('../fonts/blackDot.eot');
}

@font-face {
    font-family: 'optionsIcons';
    src: url('../fonts/icomoon.ttf') format('truetype'),
         url('../fonts/icomoon.eot');
}

@font-face {
    font-family: 'presetButtonPackage';
    src: url('../fonts/presetButton.ttf') format('truetype'),
         url('../fonts/presetButton.eot');
}

@font-face {
    font-family: 'checkboxTick';
    src: url('../fonts/tick.ttf') format('truetype'),
         url('../fonts/tick.eot');
}

.bold-font-weight {
    font-weight: bold;
}

.normal-font-weight {
    font-weight: normal;
}

.more-options-icon {
    font-family: 'optionsIcons'
}

.more-options-icon:before {
    content: "\e009";
    cursor: pointer;
}

.preference {
    padding-left: 40px;
    font-family: 'Roboto Slab', serif;
    background-color: #E5EFEF;
    width: 285px;
}

.speak-text-label {
    font-size: 19px !important;
    font-family: 'Roboto Slab', serif;
}

.speak-text-description {
    font-size: 15px !important;
}

.speech-rate-class {
    position: relative;
}

#speechRate {
    text-align: center;
    border: none;
    width: 200px;
    font-size: 23px;
    display: inline !important;
}

#speechRateLabel {
    font-size: 85%;
}

#speechRateMinus {
    font-size: 50px;
}

#speechRatePlus {
    font-size: 30px;
    font-weight: bold;
}

textarea:focus, input:focus {
    outline: 0;
}

.more-options {
    padding-top: 20px;
    cursor:pointer;
    font-size: 15px;
    font-weight: bold;
    margin-left: 90px;
}

#screenReaderSwitch-div {
    height: 60px;
}

.partially-expanded {
    display: none;
}

.fully-expanded {
    display: none;
}

.switch {
    font-size:135%;
    float: left;
}

#screen-reader-onoff {
    font-size:70%;
    float:left;
    margin-left:37px;
}

#braille-onoff {
    font-size:70%;
    float:left;
    margin-left:125px;
}

input[type="radio"] {
    display:none;
}

input[type="radio"] + label {
    font-family: 'Open Sans', sans-serif;
    text-transform: capitalize;
}

div.punctuationVerbosity-container {
    height: 55px;
    width: 250px;
    background-color: #CEDBDD;
    border-radius: 4%;
    padding-top: 10px;
    padding-left: 5px;
}

input[type="radio"] + label.radioButton-left > span {
    font-family: 'radioButtonIcons';
}

input[type="radio"] + label.radioButton-left > span:before {
    font-size: 150%;
    position: absolute;
    margin-top: -30px;
    margin-left: -30px;
    color: white;
    border: solid white;
    background-color: white;
    border-radius: 100%;
    border-width: thin medium;
    content: "\e001";
}

input[type="radio"]:checked + label.radioButton-left > span:before {
    color: #566273;
    border: solid white;
    background-color: white;
    border-radius: 100%;
    border-width: thin medium;
}

input[type="radio"] + label.radioButton-second > span {
    font-family: 'radioButtonIcons';
}

input[type="radio"] + label.radioButton-second > span:before {
    font-size: 150%;
    position: absolute;
    margin-top: -30px;
    margin-left: -33px;
    color: white;
    border: solid white;
    background-color: white;
    border-radius: 100%;
    border-width: thin medium;
    content: "\e001";
}

input[type="radio"]:checked + label.radioButton-second > span:before {
    color: #566273;
    border: solid white;
    background-color: white;
    border-radius: 100%;
    border-width: thin medium;
}

input[type="radio"] + label.radioButton-third > span {
    font-family: 'radioButtonIcons';
}

input[type="radio"] + label.radioButton-third > span:before {
    font-size: 150%;
    position: absolute;
    margin-top: -30px;
    margin-left: -31px;
    color: white;
    border: solid white;
    background-color: white;
    border-radius: 100%;
    border-width: thin medium;
    content: "\e001";
}

input[type="radio"]:checked + label.radioButton-third > span:before {
    color: #566273;
    border: solid white;
    background-color: white;
    border-radius: 100%;
    border-width: thin medium;
}

input[type="radio"] + label.radioButton-right > span {
    font-family: 'radioButtonIcons';
}

input[type="radio"] + label.radioButton-right > span:before {
    font-size: 150%;
    position: absolute;
    margin-top: -30px;
    margin-left: -21px;
    color: white;
    border: solid white;
    background-color: white;
    border-radius: 100%;
    border-width: thin medium;
    content: "\e001";
}

input[type="radio"]:checked + label.radioButton-right > span:before {
    color: #566273;
    border: solid white;
    background-color: white;
    border-radius: 100%;
    border-width: thin medium;
}

input[type="radio"] + label.radioButton-left {
    position: absolute;
    margin-top: 30px;
}

input[type="radio"] + label.radioButton-second {
    margin-left: 70px;
    position: absolute;
    margin-top: 30px;
}

input[type="radio"] + label.radioButton-third {
    margin-left: 140px;
    position: absolute;
    margin-top: 30px;
}

input[type="radio"] + label.radioButton-right {
    margin-left: 210px;
    position: absolute;
    margin-top: 30px;
}

input[type="radio"] + label {
    font-size: 90%;
}

input[type=checkbox] {
    position: absolute;
    overflow: hidden;
    clip: rect(0 0 0 0);
    height:0px;
    width:0px;
    margin:-1px;
    padding:0;
    border:0;
}

input[type=checkbox] + label.checkbox-label {
    font-family: 'Open Sans', sans-serif;
}

.presetButton-icon {
    font-family: 'presetButton';
    font-size: 600%!important;
    position: absolute;
    color: #566374;
    z-index: 1;
}

.presetButton-icon:before {
    content: "\e00d";
}

.white-baloon-icon {
    position: absolute;
    font-family: 'presetButtonPackage';
}

.white-baloon-icon:before {
    content: "\e004";
    position: absolute;
    z-index: 4;
    margin-top: 7px;
    margin-left: 7px;
    font-size: 70px;
    color: white;
}
/* ... */

